--- a/30th Jan Assingment/Q1.ipynb
+++ b/30th Jan Assingment/Q1.ipynb
@@ -2,22 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "56e350a9-7e2a-44b6-9e2c-50941f8c089e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter your marks 70\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'c:\\Users\\TRY HARD\\AppData\\Local\\Programs\\Python\\Python310\\python.exe' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '\"c:/Users/TRY HARD/AppData/Local/Programs/Python/Python310/python.exe\" -m pip install ipykernel -U --user --force-reinstall'"
      ]
     }
    ],
@@ -42,7 +38,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -56,9 +52,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.6"
   },
-  "toc-showmarkdowntxt": true
+  "toc-showmarkdowntxt": true,
+  "vscode": {
+   "interpreter": {
+    "hash": "5d0fe2b39c3f6e313bee965053bd5c8fe08566b0e7ee4ab68b2e774a2179d455"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
