4th Feb assingment

--- a/4thFeb/4thFeb.ipynb
+++ b/4thFeb/4thFeb.ipynb
@@ -119,16 +119,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "0e9b3640-64b8-4f80-9046-134f24f84410",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['php', 'aba', 'radar', 'level']\n"
+     ]
+    }
+   ],
    "source": [
     "# Q6. Write a python program to find palindromes in the given list of strings using lambda and filter\n",
     "# function.\n",
     "# ['python', 'php', 'aba', 'radar', 'level']\n",
     "check_pallindrome= ['python', 'php', 'aba', 'radar', 'level']\n",
-    "pallindrome_list=list(filter(lam))"
+    "pallindrome_list=list(filter(lambda x:x==x[::-1],check_pallindrome))\n",
+    "print(pallindrome_list)"
    ]
   }
  ],
